adding an important message
Former-commit-id: dae9b96a34d167e47087a5b1ec8174b3fd80c023

--- a/lib/jade/docs/3.x/philosophy/index.jade
+++ b/lib/jade/docs/3.x/philosophy/index.jade
@@ -22,6 +22,10 @@ block fullPane
       * By relying mostly on Sass mixins, only the CSS you need ends up in your
         project.*
     * Customizable by design
+      * Other frameworks were very hard to style. You would look at websites
+        and immediately know they used a certain framework.
+      * I wanted to make something that was so easy to style, it just required 
+        changing no more than ten variables.
       * The design of the Kickstart compilation system encourages creating
         themes by treating component styles as extensible classes.
     * Optimized for specific use cases.
