--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -37,3 +37,10 @@ block sidebar
       a(href="#") tl;dr
     li
       a(href="#") About
+
+block postJS
+  script.
+    k$.status({
+      text: "This is a work in progress. It's not in alpha or beta, it's just unfinished. How did you get this link anyway?",
+      delay: 0
+    })
