Status bar container doesnt block mouse click
Former-commit-id: 433b839eb2d067b95b19185be887677a66c440c0

--- a/lib/sass/components/_notifications.sass
+++ b/lib/sass/components/_notifications.sass
@@ -5,6 +5,7 @@
   right: 0
   z-index: 1100 // Above modal
   display: flex
+  pointer-events: none
 
   .status-bar_status
     +root-element
@@ -24,6 +25,7 @@
     animation-fill-mode: both
     z-index: 1000
     animation-name: fadeInDown
+    line-height: normal
 
     &[data-type="success"]
       background-color: $green
