adding js instructions to application file
Former-commit-id: ca65eae9675c8c9d39e6ade0cca8830a1dda921e

--- a/lib/jade/docs/3.x/index.jade
+++ b/lib/jade/docs/3.x/index.jade
@@ -101,6 +101,14 @@ block fullPane
     to override. For this reason, we recommend converting your
     application.css file instead. (above)
 
+    #### JavaScript
+
+    Fortunately, adding the JavaScript is easier. Just add
+
+      //= require kickstart_rails
+    
+    to the top of application.js
+
     #### Autoprefixing
 
     The gem uses autoprefixer to automatically prefix styles. If you want to
