--- a/rails/app/assets/stylesheets/kickstart_rails/components/_nav.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_nav.sass
@@ -6,7 +6,7 @@
 
 =navbar-default($bleed-container: false, $background: $dark-white)
   background: $background
-  border-top: 1px solid $darker-white
+  border-top: 1px solid darken($background, 12%)
 
   nav
     display: inline-flex
