adding minified versions
Former-commit-id: 58b8c5d924c34f3b1fed2bf922a69139ea4886a7

--- a/lib/jade/docs/3.x/index.jade
+++ b/lib/jade/docs/3.x/index.jade
@@ -25,17 +25,17 @@ block fullPane
   :markdown
     Use the CDN
 
-        <link rel="stylesheet" href="//cdn.getkickstart.com/css/kickstart.css" />
-        <script type="text/javascript" src="//cdn.getkickstart.com/js/kickstart.js"></script>
+        <link rel="stylesheet" href="//cdn.getkickstart.com/css/kickstart.min.css" />
+        <script type="text/javascript" src="//cdn.getkickstart.com/js/kickstart.min.js"></script>
 
   p Or download kickstart.css and kickstart.js and include in your html file.
 
   p
-    a.button.primary(href="/css/kickstart.css")
+    a.button.primary(href="/css/kickstart.min.css")
       span.fa.fa-cloud-download
       |  kickstart.css
     | &nbsp;
-    a.button.primary(href="/js/kickstart.js")
+    a.button.primary(href="/js/kickstart.min.js")
       span.fa.fa-cloud-download
       |  kickstart.js
 
