--- a/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
@@ -38,7 +38,7 @@ $white:          #FFF
 
 $red:            #CA3518
 $orange:         darkorange
-$yellow:         rgb(255, 250, 14)
+$yellow:         #ffe312
 $green:          #58AA00
 $blue:           cornflowerblue
 $violet:         darkmagenta
