--- a/lib/jade/docs/3.x/ui/tiles/index.jade
+++ b/lib/jade/docs/3.x/ui/tiles/index.jade
@@ -25,5 +25,82 @@ block basic
     The best way to use tiles is with standard typography tags like 
     headings and paragraphs.
 
-  .is-semantic
-  .isnot-semantic
+  .tile
+    h1 Books and Music
+    p Check out our great selection of entertainment. We know you'll find something you enjoy.
+
+  .if-semantic
+    :markdown
+      <span>
+        
+          <aside class="books-and-music">
+            <h1>Books and Music</h1>
+            <p>Check out our great selection of entertainment. We know you'll find something you enjoy.</p>
+          </aside>
+
+          .books-and-music {
+            @include tile();
+          }
+
+  .ifnot-semantic
+    :markdown
+      <span>
+        
+          <aside class="tile">
+            <h1>Books and Music</h1>
+            <p>Check out our great selection of entertainment. We know you'll find something you enjoy.</p>
+          </aside>
+
+block variations
+  h2 Coloring tiles
+  .row
+    .col.col-third
+      a.tile.red
+        h1 News
+        p Top of the hour alerts on what's going on in the world today.
+
+    .col.col-third
+      a.tile.orange
+        h1 Sports
+        p Get the latest scores and interviews with players in this action-packed segment.
+
+    .col.col-third
+      a.tile.yellow
+        h1 Living
+        p Learn about some of the hottest new restaurants in the area.
+
+    .col.col-third
+      a.tile.green
+        h1 Finance
+        p We'll tell you about the movers and shakers in the world today.
+
+    .col.col-third
+      a.tile.blue
+        h1 International
+        p Culture and top events from around the world
+
+    .col.col-third
+      a.tile.violet
+        h1 Opinions
+        p Our top columnists state their positions on hot button issues.
+
+  :markdown
+    <span>
+
+        <a class="tile red">...</a>
+        <a class="tile orange">...</a>
+        <a class="tile yellow">...</a>
+        <a class="tile green">...</a>
+        <a class="tile blue">...</a>
+        <a class="tile violet">...</a>
+
+  .if-semantic
+    :markdown
+      <span>
+
+          a.tile.red    { @include tile($red); }
+          a.tile.orange { @include tile($orange); }
+          a.tile.yellow { @include tile($yellow); }
+          a.tile.green  { @include tile($green); }
+          a.tile.blue   { @include tile($blue); }
+          a.tile.violet { @include tile($violet); }
