Tiles docs finished
Former-commit-id: 60b39819b1d7334169d45307629389453ad21dc3

--- a/lib/jade/docs/3.x/ui/tiles/index.jade
+++ b/lib/jade/docs/3.x/ui/tiles/index.jade
@@ -94,9 +94,16 @@ block variations
         <a class="tile blue">...</a>
         <a class="tile violet">...</a>
 
+  .ifnot-semantic
+    :markdown
+      Coloring tiles is pretty straightforward, only requiring you to add a color or 
+      `primary`/`secondary` to the `tile` class.
+
   .if-semantic
     :markdown
-      <span>
+      Coloring tiles is pretty straightforward, only requiring you to pass in the 
+      desired color as a parameter. The headlines will automatically pick up the
+      same styles.
 
           a.tile.red    { @include tile($red); }
           a.tile.orange { @include tile($orange); }
