Fixing tiles in example
Former-commit-id: 4190ec94a995e032d8d38984fdea36bd3151db72

--- a/lib/jade/docs/3.x/ui/tiles/index.jade
+++ b/lib/jade/docs/3.x/ui/tiles/index.jade
@@ -4,17 +4,21 @@ block hero-title
   h1 Tiles
 
 block hero-example
-  .tile
-    h1 First page
-    p Use this menu to check bus schedules
+  .row
+    .col.col-third
+      .tile
+        h1 First page
+        p Use this menu to check bus schedules
 
-  .tile.red
-    h1 Oh no, something's wrong
-    p Check your reservation times. I think you may have made an error.
+    .col.col-third
+      .tile.red
+        h1 Oh no, something's wrong
+        p Check your reservation times. I think you may have made an error.
 
-  .tile.red
-    h1 We have you booked!
-    p Thanks for reserving with us. We'll see you on Saturday.
+    .col.col-third
+      .tile.red
+        h1 We have you booked!
+        p Thanks for reserving with us. We'll see you on Saturday.
 
 block basic
   :markdown
