Starting on tooltip docs
Former-commit-id: 0abd42fa1b51b556ae95efef8cce75108feb4236

--- a/lib/jade/docs/3.x/ui/tooltips/index.jade
+++ b/lib/jade/docs/3.x/ui/tooltips/index.jade
@@ -2,3 +2,28 @@ extends ../../layout
 
 block hero-title
   h1 Tooltips
+
+block hero-example
+  .tooltip-trigger
+    a(href="#") Hover&nbsp;
+    .label I'm a tooltip!
+
+  .tooltip-trigger
+    a(href="#") over&nbsp;
+    .label.red I'm a tooltip!
+
+  .tooltip-trigger
+    a(href="#") any&nbsp;
+    .label.orange I'm a tooltip!
+
+  .tooltip-trigger
+    a(href="#") of&nbsp;
+    .label.yellow I'm a tooltip!
+
+  .tooltip-trigger
+    a(href="#") these&nbsp;
+    .label.green I'm a tooltip!
+
+  .tooltip-trigger
+    a(href="#") words&nbsp;
+    .label.blue I'm a tooltip!
