--- a/lib/sass/kickstart.sass
+++ b/lib/sass/kickstart.sass
@@ -71,6 +71,12 @@
 .col-twothirds
   +column('twothirds')
 
+// IMAGES
+// ------
+
+.thumbnail-content
+  +thumbnail-content
+
 // MODALS
 // ------
 
