--- a/lib/sass/core/_components.sass
+++ b/lib/sass/core/_components.sass
@@ -9,6 +9,7 @@
 @import ../components/_root-element
 @import ../components/_buttons
 @import ../components/_forms
+@import ../components/_images
 @import ../components/_modals
 @import ../components/_nav
 @import ../components/_progress
