--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -88,6 +88,12 @@ $default-line-height: 1.4rem
 =form-group()
   +form-group-default()
 
+// IMAGES
+// ------
+
+=thumbnail-content
+  +thumbnail-content-default
+
 // MODALS
 // ------
 
