--- a/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
@@ -71,6 +71,12 @@
 .col-twothirds
   +column('twothirds')
 
+// IMAGES
+// ------
+
+.thumbnail-content
+  +thumbnail-content
+
 // MODALS
 // ------
 
