Running tests as part of rails build
Former-commit-id: d878fb5b9b2e4c095fb0d829ba1df6e61d7f0b85

--- a/rails/app/assets/stylesheets/kickstart_rails/components/_images.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_images.sass
@@ -2,6 +2,12 @@
   display: flex
   overflow: hidden
   margin-bottom: $space
+  align-items: flex-start
 
   > :not(img)
-    background: red
+    + img
+      margin-left: $space/2
+
+  > img
+    + :not(img)
+      margin-left: $space/2
