Adding structure for dropdown button
Former-commit-id: a00017fad1590032cd1ed93cf7972795610b4720

--- a/lib/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib/jade/docs/3.x/ui/buttons/index.jade
@@ -86,3 +86,14 @@ block variations
           .cancel {
             @include button();
           }
+
+block granular
+  h2 Dropdown buttons
+
+  button
+    | Upload
+    ul
+      li
+        a(href="#") Choose from library
+      li
+        a(href="#") Take a picture
