Adding more button examples, almost done with buttons
Former-commit-id: 9a1998646341b55474e8a98b21b52fea7653f928

--- a/lib/jade/docs/3.x/_header.jade
+++ b/lib/jade/docs/3.x/_header.jade
@@ -46,3 +46,17 @@
               a(href="/docs/3.x/functions/throttling") Throttling
         li
           a(href="/docs/3.x/philosophy/") Philosophy
+
+      ul
+        li #{currentVersion}
+        li 
+          | Other versions
+          ul
+            li
+              a(href="/docs/1.x") 1.5.0
+            li
+              a(href="/docs/2.x") 2.0.8
+            li
+              a(href="/docs/3.x") #{currentVersion} (current)
+            li
+              a(href="/docs/4.x") 4 (Future plans)
