--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -29,6 +29,14 @@ block mainpane
         ## Third thing
         Third thing
 
+  :markdown
+    ### Pitches
+
+    * X% smaller than Bootstrap, X% smaller than Foundation
+    * Option to decouple css library from classes
+      * Can be used with functional, presentational, or content-based 
+    * Not dependent on any JS libraries, including jQuery
+
 
 block sidebar
   h1 Table of Contents
