--- a/lib/jade/docs/3.x/ui/tables/index.jade
+++ b/lib/jade/docs/3.x/ui/tables/index.jade
@@ -13,3 +13,299 @@ block hero-example
       tr
         td Foo
         td Bar
+
+block basic
+  :markdown
+    The base styling for tables is very minimal, focused mainly on correcting 
+    the weirdness of default HTML styling. 
+
+  table.table
+    thead
+      tr
+        th First
+        th Last
+        th Role
+    tbody
+      tr
+        td John
+        td Smith
+        td Consultant
+      tr
+        td Mary
+        td Todd
+        td President
+      tr
+        td Jane 
+        td Doe
+        td Marketer
+      tr
+        td Albert
+        td West
+        td Graphic Design
+
+  :markdown
+    <span>
+
+        <table class="table">
+          <thead>
+            <tr>
+              <th>First</th>
+              <th>Last</th>
+              <th>Role</th>
+            </tr>
+          </thead>
+          <tbody> 
+            <tr>
+              <td>John</td>
+              <td>Smith</td>
+              <td>Consultant</td>
+            </tr>
+            <tr>
+              <td>Mary</td>
+              <td>Todd</td>
+              <td>President</td>
+            </tr>
+            ...
+          </tbody>
+        </table>
+
+  .if-semantic
+    :markdown
+      <span>
+
+          .table {
+            @import table();
+          }
+
+block variations
+  :markdown
+    ## Blank tables
+
+    While the tables default to something structured and readable,
+    this may not work with your theme either. For that reason, there
+    is an option for blank tables.
+
+  table.table.blank
+    thead
+      tr
+        th First
+        th Last
+    tbody
+      tr
+        td Jane
+        td Doe
+      tr
+        td John
+        td Smith
+
+  :markdown
+    <span>
+
+        <table class="table blank">
+          <thead>
+            <tr>
+              <th>First</th>
+              <th>Last</th>
+            </tr>
+          </thead>
+          <tbody> 
+            <tr>
+              <td>Jane</td>
+              <td>Doe</td>
+            </tr>
+            <tr>
+              <td>John</td>
+              <td>Smith</td>
+            </tr>
+          </tbody>
+        </table>
+
+  .if-semantic
+    :markdown
+      <span>
+
+          .table.blank {
+            @import table($blank: true);
+          }
+
+  :markdown
+    ## Readability tweaks
+
+    ### Zebra-striping
+
+  table.table.zebra
+    thead
+      tr
+        th First
+        th Last
+    tbody
+      tr
+        td Jane
+        td Doe
+      tr
+        td Bob
+        td Smith
+      tr
+        td Craig
+        td Thompson
+      tr
+        td Doug
+        td Winston
+
+  :markdown
+    <span>
+
+        <table class="table zebra">
+          <thead>
+            <tr>
+              <th>First</th>
+              <th>Last</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Jane</td>
+              <td>Doe</td>
+            </tr>
+            <tr>
+              <td>Bob</td>
+              <td>Smith</td>
+            </tr>
+            <tr>
+              <td>Craig</td>
+              <td>Thompson</td>
+            </tr>
+            <tr>
+              <td>Doug</td>
+              <td>Winston</td>
+            </tr>
+          </tbody>
+        </table>
+
+  .if-semantic
+    :markdown
+      <span>
+
+          .table.zebra {
+            @import table($zebra: true);
+          }
+
+  h3 Row hover
+
+  table.table.hover
+    thead
+      tr
+        th First
+        th Last
+    tbody
+      tr
+        td Jane
+        td Doe
+      tr
+        td Bob
+        td Smith
+      tr
+        td Craig
+        td Thompson
+      tr
+        td Doug
+        td Winston
+
+  :markdown
+    <span>
+
+        <table class="table hover">
+          <thead>
+            <tr>
+              <th>First</th>
+              <th>Last</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Jane</td>
+              <td>Doe</td>
+            </tr>
+            <tr>
+              <td>Bob</td>
+              <td>Smith</td>
+            </tr>
+            <tr>
+              <td>Craig</td>
+              <td>Thompson</td>
+            </tr>
+            <tr>
+              <td>Doug</td>
+              <td>Winston</td>
+            </tr>
+          </tbody>
+        </table>
+
+  .if-semantic
+    :markdown
+      <span>
+
+          .table.hover {
+            @import table($hover: true);
+          }
+
+  h2 Combining
+
+  p Styles are designed to be decoupled, so they can be combined with others.
+
+  table.table.zebra.hover.blank
+    thead
+      tr
+        th First
+        th Last
+    tbody
+      tr
+        td Jane
+        td Doe
+      tr
+        td Bob
+        td Smith
+      tr
+        td Craig
+        td Thompson
+      tr
+        td Doug
+        td Winston
+
+  :markdown
+    <span>
+
+        <table class="table zebra hover blank">
+          <thead>
+            <tr>
+              <th>First</th>
+              <th>Last</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Jane</td>
+              <td>Doe</td>
+            </tr>
+            <tr>
+              <td>Bob</td>
+              <td>Smith</td>
+            </tr>
+            <tr>
+              <td>Craig</td>
+              <td>Thompson</td>
+            </tr>
+            <tr>
+              <td>Doug</td>
+              <td>Winston</td>
+            </tr>
+          </tbody>
+        </table>
+
+  .if-semantic
+    :markdown
+      <span>
+
+          .table.hover.zebra.blank {
+            @import table($hover: true, $blank: true, $zebra: true);
+          }
