--- a/lib/jade/docs/3.x/ui/forms/index.jade
+++ b/lib/jade/docs/3.x/ui/forms/index.jade
@@ -7,7 +7,7 @@ block hero-example
   form.form
     label Email
     input(type="email" placeholder="john@example.com")
-
+    
     input(value="Subscribe" type="submit" role="button")
 
 block basic
@@ -18,13 +18,43 @@ block basic
     label Last Name
     input(type="text" placeholder="Smith")
 
+    label Issue size
+    label
+      input(type="radio" name="issue")
+      |  Small issue
+    label
+      input(type="radio" name="issue")
+      |  Regular issue
+    label
+      input(type="radio" name="issue")
+      |  Large issue
+
+    label Shipping options
+    label
+      input(type="checkbox")
+      |  Fast shipping
+    label
+      input(type="checkbox")
+      |  Gift-wrapping
+
+    label Subscription frequency
+    select
+      option Daily
+      option Weekly
+      option Monthly
+      option Yearly
+
     label Bio
     textarea
 
     input(value="Subscribe" type="submit" role="button")
 
 block variations
-  h3 Horizontal
+  :markdown
+    ### Horizontal
+
+    `textarea` elements are not included in default styling of horizontal
+    forms.
 
   form.form-horizontal
     label First Name
@@ -45,7 +75,10 @@ block variations
 
     input(type="submit" role="button")
 
-  h3 Left
+  :markdown
+    ### Left-aligned
+
+    Labels and form elements align to the center line of the form width.
 
   form.form-left
     label First Name
@@ -69,7 +102,8 @@ block variations
 
     input(type="submit" role="button")
 
-  h3 Validation
+  :markdown
+    ### Validation
 
   form.form
     label First Name
